# dolphin-plugin-owncloud

./: CMakeLists.txt  README.md  dolphin-plugin-owncloud.cpp  dolphin-plugin-owncloud.desktop  dolphin-plugin-owncloud.h
